[package]
name = "battleships"
version = "0.1.0"
edition = "2021"

[features]
abi = ["pbc_contract_common/abi", "pbc_contract_codegen/abi", "pbc_traits/abi", "create_type_spec_derive/abi", "pbc_lib/abi"]

[lib]
crate-type = ['rlib', 'cdylib']

[package.metadata.partisiablockchain]
cargo-partisia = "1.28.0"

[package.metadata.zk]
zk-compute-path = "src/zk_compute.rs"

[package.metadata.zkcompiler]
url = "https://gitlab.com/api/v4/projects/37549006/packages/maven/com/partisiablockchain/language/zkcompiler/3.82.0/zkcompiler-3.82.0-jar-with-dependencies.jar"

[dependencies]
pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git" }

